Add feature to display colors according to devtools theme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,6 +14,7 @@
       "run_at": "document_end"
     }
   ],
+  "devtools_page": "html/devtools.html",
   "background": {
     "service_worker": "js/background.js",
     "type": "module"
